--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,17 +1,4 @@
 ---
-- name: Common | ensure apt cache is up to date
-  apt: update_cache=yes
-
-- name: Common | make sure the system encoding is ${ locale }
-  sudo: yes
-  template: src=locale dest=/etc/default/locale
-            owner=root group=root mode=644
-
-- name: Common | install ${ item } pkgs
-  apt: pkg=${ item }
-  with_items: $packages
-  sudo: yes
-
 - name: Common | checks if resolver is working properly (issues with some VBox/Host OS combinations)
   action: command host -t A ansible.cc
   register: ns
@@ -24,6 +11,19 @@
 - name: Common | checks if resolver is working properly with new nameserver
   action: command host -t A ansible.cc
 
+- name: Common | make sure the system encoding is {{ locale }}
+  sudo: yes
+  template: src=locale dest=/etc/default/locale
+            owner=root group=root mode=644
+
+- name: Common | ensure apt cache is up to date
+  apt: update_cache=yes
+
+- name: Common | install {{ item }} pkgs
+  apt: pkg={{ item }}
+  with_items: $packages
+  sudo: yes
+
 - name: Common | app_prepare | Create apps users path
-  file: state=directory path=${ project_directory }
+  file: state=directory path={{ project_directory }}
   sudo: yes
