--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   description: Common role for prepair machine
   company: Undev
   license: MIT
-  versions: 0.2
+  version: 0.3
   min_ansible_version: 1.4
   platforms:
     - name: Ubuntu
