--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -32,6 +32,7 @@
         state=present
   sudo: yes
   with_items: users
+  when: "{{ item.name }} != {{ ansible_ssh_user }}" 
 
 - name: add ~/.bashrc to user
   file: state=touch dest="{{ item.home }}/.bashrc"
