--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,7 +18,7 @@
 
 - name: ensure apt cache is up to date
   sudo: yes
-  apt: update_cache=yes
+  apt: update_cache=yes cache_valid_time=3600
 
 - name: install {{ item }} pkgs
   sudo: yes
