ensure locale var is rendered

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,7 +12,7 @@
 - name: checks if resolver is working properly with new nameserver
   command: host -t A ansible.cc
 
-- name: make sure the system encoding is {{ locale }}
+- name: "make sure the system encoding is {{ locale }}"
   sudo: yes
   template: src=locale dest=/etc/default/locale owner=root group=root mode=644
 
