--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,13 +16,9 @@
   sudo: yes
   template: src=locale dest=/etc/default/locale owner=root group=root mode=644
 
-- name: ensure apt cache is up to date
-  sudo: yes
-  apt: update_cache=yes cache_valid_time=3600
-
 - name: install {{ item }} pkgs
   sudo: yes
-  apt: pkg={{ item }} state=present
+  apt: pkg={{ item }} state=present update_cache=yes cache_valid_time=3600
   with_items: packages
 
 - name: create users
